--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -38,6 +38,6 @@ jobs:
         # See https://prettier.io/docs/en/options.html#end-of-line
         if: ${{ runner.os != 'Windows' }}
       - name: Run unit tests
-        run: npm test
+        run: npm test --if-present
       - name: Upload to Codecov.io
         uses: codecov/codecov-action@v3
