--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -49,3 +49,5 @@ jobs:
         run: npm test --if-present -- ${{ inputs.test-options }}
       - name: Upload to Codecov.io
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
